# claude-mcp

./: .gitignore  README.md  pyproject.toml  requirements.txt  search_engine.py  sse_claude_desktop_config.json
src/search_server/: knowledge_base.py  logger.py  search_engine.py  server.py  web_scraper.py
src/search_server/backup/: pyproject.toml
tests/: test_search_server.py
