[project]
name = "search_server"
version = "1.0.0"
description = "MCP Search Server"
authors = [
    { name = "Ray Sheng", email = "jbsheng@gmail.com" }
]
dependencies = [
    "requests>=2.32.3",
    "pydantic>=2.0.0",
    "mcp>=1.0.0",
]
requires-python = ">=3.10"

[project.scripts]
search-server = "search_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pyright>=1.1.389",
    "pytest>=8.3.3",
]
